--- a/style.css
+++ b/style.css
@@ -183,4 +183,9 @@ input[type="text"] {
     .single-meal {
         width: 100%;
     }
+
+    .meal {
+        height: 200px;
+        width: 200px;
+    }
 }
